--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="carro.js"></script>
+    <script src="galinha.js"></script>
+    <script src="imagem.js"></script>
   </body>
 </html>
