--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="carro.js"></script>
     <script src="galinha.js"></script>
     <script src="imagem.js"></script>
+    <script src="p5.collide2d.js"></script>
   </body>
 </html>
